tasks in process

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,35 @@
 </head>
 <body>
     <div class="wrapper">
-        
+      <!-- <div class="trello-wrapper">
+            <h3 class="app-title">TRELLO</h3>
+            <div class="widget-main">
+                <div class="list-wrapper">
+                    <div class="list-header">
+                        <span class="list-title">TODO</span>
+                        <span class="list-settings">...</span>
+                    </div>
+                    <ul class="list todo"></ul>
+                    <span class="list-footer btn">+ Add another card</span>
+                </div>
+                <div class="list-wrapper">
+                    <div class="list-header">
+                        <span class="list-title">INPROGRESS</span>
+                        <span class="list-settings">...</span>
+                    </div>
+                    <ul class="list todo"></ul>
+                    <span class="list-footer btn">+ Add another card</span>
+                </div>
+                <div class="list-wrapper">
+                    <div class="list-header">
+                        <span class="list-title">DONE</span>
+                        <span class="list-settings">...</span>
+                    </div>
+                    <ul class="list todo"></ul>
+                    <span class="list-footer btn">+ Add another card</span>
+                </div>
+            </div>
+        </div>-->
     </div>
 </body>
 </html>
